[gd_scene load_steps=17 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/GhostBusters.gd" type="Script" id=2]
[ext_resource path="res://Audio/Die.wav" type="AudioStream" id=3]
[ext_resource path="res://Entities/Player/BloodSplatter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Entities/Player.png" type="Texture" id=5]
[ext_resource path="res://Audio/Step.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Coin.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 15 )

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 7 )
random_pitch = 1.4

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.4

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.148651, 1 ),
"update": 0,
"values": [ Vector2( 1.99343, 0.735448 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "INIT"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.148651, 1 ),
"update": 0,
"values": [ Vector2( 0.580396, 1.5396 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Move"
length = 0.15
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Run:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AudioStreamRandomPitch" id=8]
audio_stream = ExtResource( 6 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
collision_mask = 2
script = ExtResource( 1 )
speed_scale = 11.0
min_jump_height_scale = 0.8
death_particles = ExtResource( 4 )

[node name="Center" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
color = Color( 0.387, 0.9, 0.387, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_top = -24.2583
margin_right = 29.0
margin_bottom = -21.0
color = Color( 0.913725, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 1 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 9 )
volume_db = -9.972
bus = "REV"

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )
volume_db = -9.972
bus = "REV"

[node name="GhostBusters" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostBusters"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.99343, 0.735448 )
texture = ExtResource( 5 )
offset = Vector2( 0, -16 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "INIT"
anims/Fall = SubResource( 4 )
anims/INIT = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Move = SubResource( 7 )

[node name="Run" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 8 )
bus = "REV"
[connection signal="area_entered" from="GhostBusters" to="GhostBusters" method="_on_GhostBusters_area_entered"]
[connection signal="area_exited" from="GhostBusters" to="GhostBusters" method="_on_GhostBusters_area_exited"]
